2005-05-19  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: sync changes back from Fedora Extras.

2005-05-18  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.19.

==================== 0.18 ====================

2005-05-18  Mark McLoughlin  <markmc@redhat.com>

	* configure.in: Version 0.18.
	
2005-05-18  Mark McLoughlin  <markmc@redhat.com>

	* lib/cache.py: not everyone want's to use DV's homedir :-)

Wed May 18 16:33:34 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/userdb.py lib/cache.py: add XInclude support when parsing
	  the user DB database to be able to build it from various web
	  fragments. MAke sure the cache is used for all those potential
	  web requests. Now the user as well as the profiles can be defined
	  in a centralized place.

2005-05-17  Mark McLoughlin  <markmc@redhat.com>

	* lib/unittests.py: add cache

Tue May 17 17:49:48 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/cache.py lib/storage.py: plugging the network cache at the
	  storage level, added read-only property, change the cache output
	  to be filenames not streams, and a couple of bug fixes
	* sabayon.spec.in lib/Makefile.am: integration of the cache module

Tue May 17 14:33:55 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/cache.py lib/util.py: added regression testing to the cache 
	  module, fixed a few bugs, integrated in the debugging API, but
	  not plugged yet.

Mon May 16 19:21:37 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* Makefile.am: fix "make rpm"
	* lib/cache.py: first version of the cache code, not plugged yet
	  regression tests needed, and timeout contorl need to be added too

2005-05-13  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: update the %files list.

2005-05-12  Mark McLoughlin  <markmc@redhat.com>

	* doc/flat.html: fix invalid html.
	
	* doc/index.html: rebuild.

2005-05-12  Mark McLoughlin  <markmc@redhat.com>

	Add a dialog for associating users with profiles.
