@@ -1,5 +1,15 @@
 2005-05-19  Mark McLoughlin  <markmc@redhat.com>
 
+	Based on a patch from  Sebastien Bacher <seb128@debian.org>
+	in bug #304696
+
+	* admin-tool/usersdialog.py: pw_gecos is a comma separated
+	list of values - split it an use the first value as the
+	user's name. If that's not set, just use the username as the
+	user's name.
+
+2005-05-19  Mark McLoughlin  <markmc@redhat.com>
+
 	* sabayon.spec.in: sync changes back from Fedora Extras.
 
 2005-05-18  Mark McLoughlin  <markmc@redhat.com>
